@@ -30,6 +30,9 @@
 #include <stdlib.h>
 #include <unistd.h>
 #include <string.h>
+#ifdef HAVE_STRINGS_H
+#include <strings.h>		/* Needed for strncasecmp() on QNX6 */
+#endif				/* #ifdef HAVE_STRINGS_H */
 #include <fcntl.h>
 
 #include "libspectrum.h"
