@@ -43,7 +43,7 @@ AC_C_BIGENDIAN
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(sys/soundcard.h sys/audioio.h siginfo.h)
+AC_CHECK_HEADERS(sys/soundcard.h sys/audioio.h siginfo.h strings.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
